@@ -4,9 +4,6 @@ Planned
 Finish makesnapshots.pl. :)
 	Added by melnik13 on 11.06.2014
 
-Compose good help-messages for runapicmd, vminfo and makesnapshots tools.
-	Added by melnik13 on 11.06.2014
-
 Make all binaries to change their eUID, as we don't want them to be
 runned as root when root calls it: it's a bit insecure and can lead to
 tons of real shit.
@@ -20,6 +17,11 @@ Also consider the developement branch, as every time you're breaking
 something, a lots of things just can't work!
 	Added by melnik13 on 30.06.2014
 	Implemented by melnik13 on the same day :)
+
+Compose good help-messages for runapicmd, vminfo and makesnapshots tools.
+	Added by melnik13 on 11.06.2014
+    Partly implemented by melnik13 on 30.06.2014
+
 
 Recondireded
 ============
